[gd_scene load_steps=19 format=2]

[ext_resource path="res://scenes/main_menu/PlayerPlatform.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/models/player/new/idle.glb" type="PackedScene" id=2]
[ext_resource path="res://scripts/main_menu/3d_maps/ActualMenu.gd" type="Script" id=3]
[ext_resource path="res://assets/sprites/main_menu/play.png" type="Texture" id=4]
[ext_resource path="res://assets/misc/buttons_actual_menu.tres" type="StyleBox" id=5]
[ext_resource path="res://assets/sprites/main_menu/cart.png" type="Texture" id=6]
[ext_resource path="res://assets/misc/fonts/Signwood-vnvD7.otf" type="DynamicFontData" id=7]
[ext_resource path="res://assets/sprites/main_menu/gear.png" type="Texture" id=8]
[ext_resource path="res://assets/models/env/gate.glb" type="PackedScene" id=9]
[ext_resource path="res://assets/models/player/updated_model/character_animations.glb" type="PackedScene" id=10]

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.117647, 0.117647, 0.117647, 0 )
border_width_left = 15
border_width_top = 15
border_width_right = 15
border_width_bottom = 15
border_color = Color( 0.184314, 0.184314, 0.184314, 0 )
corner_radius_top_left = 35
corner_radius_top_right = 35
corner_radius_bottom_right = 35
corner_radius_bottom_left = 35

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 0.392157 )
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color( 0.156863, 0.156863, 0.156863, 1 )
corner_radius_top_left = 35
corner_radius_top_right = 35
corner_radius_bottom_right = 35
corner_radius_bottom_left = 35
shadow_color = Color( 0, 0, 0, 0.780392 )
shadow_size = 3

[sub_resource type="DynamicFont" id=5]
size = 38
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 7 )

[sub_resource type="Animation" id=1]
resource_name = "IntroAnim"
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Panel2:margin_left")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -200.0, 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Panel2:margin_right")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -200.0, 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Panel:margin_top")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -200.0, 50.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Panel:margin_bottom")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -100.0, 200.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Panel2:margin_bottom")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 500.0 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Panel2:margin_top")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0.0 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("../Environment/character_animations:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=8]
resource_name = "MakePlayerRun"
length = 2.167
tracks/0/type = "value"
tracks/0/path = NodePath("../Environment/gate 2:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0.447, 0, -2.506 ), Vector3( 0.447, -1, -2.506 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Environment/character_animations:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 180, 0 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "OutroAnim"
tracks/0/type = "value"
tracks/0/path = NodePath("Panel2:margin_left")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -200.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Panel2:margin_right")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -200.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Panel:margin_top")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 50.0, -200.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Panel:margin_bottom")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 200.0, -100.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Panel2:margin_bottom")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 500.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Panel2:margin_top")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Panel2:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -500, 559 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Panel2:margin_left")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ -200.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Panel2:margin_right")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ -200.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Panel:margin_top")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 50.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Panel:margin_bottom")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 200.0 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Panel2:margin_bottom")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 500.0 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Panel2:margin_top")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0.0 ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("../Environment/gate 2:translation")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0.447, 0, -2.506 ) ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("../Environment/character_animations:rotation_degrees")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("../Environment/character_animations:translation")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0.45, 0.17, -0.44 ) ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("../Environment/character_animations:visible")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=9]
resource_name = "RealOutro"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("../Environment/character_animations:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0.45, 0.17, -0.44 ), Vector3( 0.45, 0.17, -3.7 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ColorRect:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="ActualMenu" type="Node"]
script = ExtResource( 3 )

[node name="Environment" type="Spatial" parent="."]

[node name="PlayerPlatform" parent="Environment" instance=ExtResource( 1 )]

[node name="Camera2" type="Camera" parent="Environment"]
transform = Transform( 0.984832, 0.0995216, -0.142132, 0, 0.819152, 0.573577, 0.173511, -0.564876, 0.806727, -0.0797902, 2.5, 2.245 )
projection = 1
current = true
size = 3.0

[node name="DirectionalLight" type="DirectionalLight" parent="Environment"]
transform = Transform( 0.860209, 0.295792, -0.41539, 0, 0.814582, 0.580049, 0.509943, -0.498963, 0.70071, 0, 8.11784, 0 )
light_energy = 0.2

[node name="idle2" parent="Environment" instance=ExtResource( 2 )]
transform = Transform( 0.15, 0, 0, 0, 0.15, 0, 0, 0, 0.15, 0.45, 0.17, -0.44 )

[node name="gate 2" parent="Environment" instance=ExtResource( 9 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.447, 0, -2.506 )

[node name="character_animations" parent="Environment" instance=ExtResource( 10 )]
transform = Transform( 0.15, 0, 0, 0, 0.15, 0, 0, 0, 0.15, 0.45, 0.17, -0.44 )
visible = false

[node name="UserInterface" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="UserInterface"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="Panel2" type="Panel" parent="UserInterface"]
anchor_left = -0.092
anchor_top = 0.402
anchor_right = 0.156
anchor_bottom = 0.402
margin_left = -200.0
margin_right = -200.0
margin_bottom = 500.0
custom_styles/panel = SubResource( 6 )

[node name="Play" type="Button" parent="UserInterface/Panel2"]
anchor_left = 0.372
anchor_top = 0.103
anchor_right = 0.831
anchor_bottom = 0.315
margin_left = -0.0304031
margin_top = -0.0840034
margin_right = 409.521
margin_bottom = 423.124
rect_scale = Vector2( 0.2, 0.2 )
custom_styles/normal = ExtResource( 5 )
icon = ExtResource( 4 )
icon_align = 1

[node name="Shop" type="Button" parent="UserInterface/Panel2"]
anchor_left = 0.372
anchor_top = 0.383
anchor_right = 0.831
anchor_bottom = 0.595
margin_left = -0.0304031
margin_top = 0.0759888
margin_right = 409.521
margin_bottom = 423.284
rect_scale = Vector2( 0.2, 0.2 )
custom_styles/normal = ExtResource( 5 )
icon = ExtResource( 6 )
icon_align = 1

[node name="Settings" type="Button" parent="UserInterface/Panel2"]
anchor_left = 0.372
anchor_top = 0.664
anchor_right = 0.83
anchor_bottom = 0.875
margin_left = -0.0304031
margin_top = -0.192017
margin_right = 409.223
margin_bottom = 423.0
rect_scale = Vector2( 0.2, 0.2 )
custom_styles/normal = ExtResource( 5 )
icon = ExtResource( 8 )
icon_align = 1

[node name="Panel" type="Panel" parent="UserInterface"]
anchor_left = 0.028
anchor_top = 0.031
anchor_right = 0.972
anchor_bottom = 0.031
margin_left = -0.200001
margin_top = 50.0
margin_right = 0.199951
margin_bottom = 200.0
custom_styles/panel = SubResource( 4 )

[node name="Username" type="RichTextLabel" parent="UserInterface/Panel"]
anchor_left = 0.185
anchor_top = 0.5
anchor_right = 0.185
anchor_bottom = 0.5
margin_left = -130.25
margin_top = -45.0
margin_right = 129.75
margin_bottom = 64.0
custom_fonts/normal_font = SubResource( 5 )
bbcode_enabled = true
bbcode_text = "[center]WELCOME BACK, USER[/center]"
text = "WELCOME BACK, USER"

[node name="Username2" type="RichTextLabel" parent="UserInterface/Panel"]
anchor_left = 0.812
anchor_top = 0.5
anchor_right = 0.812
anchor_bottom = 0.5
margin_left = -130.2
margin_top = -45.0
margin_right = 129.8
margin_bottom = 64.0
custom_fonts/normal_font = SubResource( 5 )
bbcode_enabled = true
bbcode_text = "[center]CURRENT COINS 999999[/center]"
text = "CURRENT COINS 999999"

[node name="AnimationPlayer" type="AnimationPlayer" parent="UserInterface"]
autoplay = "IntroAnim"
anims/IntroAnim = SubResource( 1 )
anims/MakePlayerRun = SubResource( 8 )
anims/OutroAnim = SubResource( 7 )
anims/RESET = SubResource( 2 )
anims/RealOutro = SubResource( 9 )

[connection signal="pressed" from="UserInterface/Panel2/Play" to="." method="_on_Play_pressed"]
[connection signal="animation_finished" from="UserInterface/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
